# llm-from-zero-to-interview

./: .gitignore  BOOK_SERIES.md  ENGLISH_INTERVIEW_TEMPLATES.md  EXERCISES.md  GLOSSARY_EN_ZH.md  INTERVIEW_BANK.md  KNOWLEDGE_GRAPH.md  PAPERS.md  PROGRESS.md  PROJECTS.md  README.md  ROADMAP.md  SECOND_PASS_REVIEW_PLAN.md  WRITING_PLAN.md  background.md  ideas.md  plan.md  pyproject.toml  写作注意事项.md
book-01-core-30/: 目录.md  简介.md
book-02-advanced-100/: 目录.md  简介.md
book-03-practical-handbook/: 目录.md  简介.md
book-04-llm-encyclopedia/: 目录.md  简介.md
book-05-llm-training/: 目录.md  简介.md
book-06-llm-deployment/: 目录.md  简介.md
book-07-evaluation-experiments/: 目录.md  简介.md
book-08-ai-safety-alignment/: 目录.md  简介.md
book-09-data-engineering/: 目录.md  简介.md
book-10-paper-reproduction-research/: 目录.md  简介.md
book-11-system-design-interview/: 目录.md  简介.md
book-12-career-interview-playbook/: 目录.md  简介.md
book-13-math-foundations/: 目录.md  简介.md
book-14-pytorch-deep-learning-engineering/: 目录.md  简介.md
book-15-multimodal-generative-models/: 目录.md  简介.md
book-16-reasoning-models/: 目录.md  简介.md
book-17-agent-tool-use/: 目录.md  简介.md
book-18-product-business-commercialization/: 目录.md  简介.md
book-19-practitioner-playbook/: 目录.md  简介.md
book-20-agent-harness-runtime/: 目录.md  简介.md
book-21-transformer-architecture-evolution/: 主流大模型架构创新时间线.md  目录.md  简介.md
book-22-tool-protocol-ecosystem/: 目录.md  简介.md
book-23-ai-infra/: 目录.md  简介.md
book-24-llm-inference-engine/: 目录.md  简介.md
book-llm-engineer/: chapter-60-interview-project-portfolio-system-design.md  (+22 more)
(+436 files in other folders)
